feat: fixes to support partial updates [DHIS2-14222]